# small-git

./: .gitignore  Cargo.toml  small-git.toml
python/: .python-version  pyproject.toml  small-git.py
src/: main.rs
